# omni-llm-provider

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
crates/omni-common/: Cargo.toml
crates/omni-common/src/: anthropic.rs  auth.rs  canonical_mapping.rs  conversation_log.rs  credentials.rs  env.rs  error.rs  http.rs  lib.rs  oauth_refresh.rs  replacements.rs  responses.rs  responses_upstream.rs  session.rs  span_stream.rs  stats.rs  test_support.rs  time_util.rs
crates/omni-core/: Cargo.toml
crates/omni-core/src/: canonical.rs  lib.rs  traits.rs  version.rs
crates/provider-claude/: Cargo.toml
crates/provider-claude/src/: anthropic_passthrough.rs  credentials.rs  fingerprint.rs  lib.rs  models.rs  translate.rs  upstream.rs
crates/provider-codex/: Cargo.toml
crates/provider-codex/src/: lib.rs  oauth_refresh.rs
crates/provider-grok/: Cargo.toml
crates/provider-grok/src/: credentials.rs  lib.rs
crates/providers/claude-code/src/: lib.rs
crates/providers/grok/src/: lib.rs
docs/: CLAUDE.md  DESIGN.md  GROK_AND_MULTI_PROVIDER_ACCESS_GUIDE.md  INVESTIGATION.md  README.md  SPEC.md  anthropic-compat.md  anthropic-frontend-multi-backend-plan.md  architecture.md  compatibility-gaps.md  compatibility-matrix.md  compatibility-roadmap.md  configuration.md  consolidation-2026-07-02.md  decisions.md  docker.md  grok-gate.md  grok-requirements.md  live-testing-results.md  reference-architecture.md  repo-audit-2026-06-09.md
docs/providers/: README.md
docs/providers/claude/: README.md  REBASELINE.md
docs/providers/codex/: README.md
docs/providers/grok/: CAPTURE.md  README.md
examples/: shared_replacements_demo.rs
reference-src-claude/: log_color.rs  main.rs  replacements.rs  session.rs  stats.rs
reference-src-claude/routes/: completions_v2.rs  messages.rs  mod.rs  models.rs
reference-src-claude/translate/: anthropic.rs  anthropic_passthrough.rs  from_anthropic.rs  messages.rs  mod.rs  request.rs  tool_translate.rs
reference-src-claude/upstream/: client.rs  mod.rs  stream.rs
src/: auth.rs  config.rs  conversation_log.rs  error.rs  main.rs  models.rs  replacements.rs  session.rs  stats.rs  time_util.rs
src/routes/: completions.rs  completions_v2.rs  health.rs  mod.rs  models.rs  stats.rs
src/subprocess/: manager.rs  mod.rs  ndjson.rs  process.rs
src/translate/: anthropic.rs  build.rs  from_anthropic.rs  messages.rs  mod.rs  request.rs  response.rs  stream.rs  to_oai_stream.rs  tool_translate.rs  tools.rs
src/upstream/: client.rs  credentials.rs  errors.rs  fingerprint.rs  mod.rs  stream.rs
tests/: conftest.py  run.sh  test_integration.py  test_openai_client.py
tools/: __init__.py
tools/capture/: __init__.py  __main__.py  approvals.py  cli.py  credentials.py  extract.py  providers.py  redaction.py  runner.py  workdir.py
tools/capture/tests/: test_capture.py
tools/fingerprint/: BASELINE_HEADERS.md  CCH_ALGORITHM.md  REBASELINE.md  STEP0_RESULT.md  capture_baseline.sh  check_claude_code_drift.py  extract_flow.py
tools/fingerprint/scenarios/: 01-plain-text.flow
tools/fingerprint/vectors/: README.md  vector-2.1.161-claude-haiku-4-5.json  vector-2.1.161-claude-opus-4-8.json  vector-2.1.161-claude-sonnet-4-6.json  vector-2.1.165-claude-haiku-4-5.json  vector-2.1.165-claude-sonnet-4-6.json
tools/providers/claude/fingerprint/: BASELINE_HEADERS.md  CCH_ALGORITHM.md  STEP0_RESULT.md  capture_baseline.sh  check_claude_code_drift.py  extract_flow.py
tools/providers/claude/fingerprint/vectors/: README.md  vector-2.1.162-claude-haiku-4-5.json  vector-2.1.162-claude-opus-4-8.json  vector-2.1.162-claude-sonnet-4-6.json  vector-2.1.165-claude-opus-4-8.json  vector-2.1.175-claude-fable-5.json  vector-2.1.175-claude-haiku-4-5.json  vector-2.1.175-claude-opus-4-8.json  vector-2.1.175-claude-sonnet-4-6.json
tools/providers/grok/capture/: extract_grok_http.py
