[package]
name = "claude-code-provider"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "claude-code-provider"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
dirs = "6"
tokio-stream = "0.1"
redb = "2.4"

[profile.release]
strip = true
lto = true
