[package]
name = "claude-code-provider"
version = "2.1.8"
edition = "2024"

[[bin]]
name = "claude-code-provider"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "v5"] }
thiserror = "2"
dirs = "6"
tokio-stream = "0.1"
redb = "2.4"
toml = "0.8"
nu-ansi-term = "0.50"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2", "gzip", "brotli", "deflate"] }
bytes = "1"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
ring = "0.17"

[profile.release]
strip = true
lto = true
