[workspace]
members = [
  "crates/omni-common",
  "crates/omni-core",
  "crates/provider-claude",
  "crates/provider-codex",
  "crates/provider-grok",
  "crates/bin/omni",
]
resolver = "2"

[workspace.package]
version = "3.9.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
authors = ["Omni LLM Contributors"]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5"] }
redb = "2.4"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
