[package]
name = "omni-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# Build-and-locate helper for the binary crates' subprocess integration tests.
# Off by default so the test-only code is never compiled into production builds;
# the binaries enable it via a dev-dependency on omni-common.
test-support = []

[dependencies]
omni-core = { path = "../omni-core" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
redb.workspace = true
toml.workspace = true
chrono.workspace = true
futures-util.workspace = true
async-stream.workspace = true
dirs = "6"
