[package]
name = "omni-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
futures-core.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
futures-util.workspace = true
