[package]
name = "provider-claude"
version.workspace = true
edition.workspace = true

[dependencies]
omni-common = { path = "../omni-common" }
omni-core = { path = "../omni-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["http2"] }
tracing.workspace = true
ring = "0.17"
uuid.workspace = true
chrono.workspace = true
dirs = "6"
bytes = "1"
futures-util = "0.3"
tokio = { workspace = true }
async-trait = "0.1"
anyhow.workspace = true
