[package]
name = "provider-codex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
omni-core = { path = "../omni-core" }
omni-common = { path = "../omni-common" }

anyhow.workspace = true
async-stream.workspace = true
async-trait = "0.1"
chrono.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
dirs = "6"

[dev-dependencies]
wiremock = "0.6.5"
