[package]
name = "provider-grok"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
omni-common = { path = "../omni-common" }
omni-core = { path = "../omni-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tracing.workspace = true
async-trait = "0.1"
anyhow.workspace = true
futures-util.workspace = true
async-stream.workspace = true

[dev-dependencies]
omni-common = { path = "../omni-common", features = ["test-support"] }
tokio = { version = "1", features = ["rt", "macros"] }
chrono.workspace = true
wiremock = "0.6.5"
uuid.workspace = true
